# AIHMM

./: .gitignore  .gitignore~  CMakeLists.txt  README.md  README.txt  build.sh
allelic/Debug/: AIHMM  ceu8StateHMMParams.txt  finishedParameters.txt  makefile
allelic/Debug/src/: Prior.d  RegChromosome.d  RegInfo.d  RegSNP.d  Tester.d  ZScore.d  subdir.mk  subdir.mk~
allelic/src/: Chromosome.cpp  Chromosome.h  ExpressionInfo.cpp  ExpressionInfo.h  FileReader.cpp  FileReader.h  HMMSNP.cpp  HMMSNP.h  Individual.cpp  Individual.h  SNP.cpp  SNP.h  allelicImbalance.cpp  constants.c  constants.h
allelic/src/src/: .#Prior.h.1.2
data/: test_snpsChrom1.txt
models/: test4StateHMMParams.txt
scripts/: generate_test_data.py
src/: main.cpp
src/core/: Chromosome.h  Individual.cpp  Individual.h  SNP.cpp  SNP.h
src/hmm/: HMMSNP.cpp  HMMSNP.h  constants.c  constants.h
src/io/: FileReader.cpp  FileReader.h
